file-gateway-service/k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: file-gateway
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: file_gw_list
      prefix: ^/*/api/files(/(lookup|stat))?$
      prefix_regex: true
      rewrite: ""
      service: file-gateway:8080
      method: GET
      precedence: 9

      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: file_fav_list_gw
      prefix: ^/api/files/favorite$
      prefix_regex: true
      rewrite: ""
      service: file-gateway:8080
      method: GET
      precedence: 9

      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: filesearch_gw
      prefix: ^/api/file-search(/.*)?$
      prefix_regex: true
      service: file-gateway:8080
      rewrite: ""
      precedence: 9

spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: file-gateway
